fix: fix a bug that caused the text on CTA nav button to not be visible on hover

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -87,6 +87,7 @@ nav.desktop ul {
     width: 0;
     background-color: var(--color-primary);
     transition: 0.2s ease-out;
+    z-index: -1;
 }
 
 .styled-link:hover::before {
